--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,8 @@
 name: Build
+sonar.projectVersion=1.0
+sonar.sourceEncoding=UTF-8
+sonar.language=java
+sonar.java.binaries=target/classes
 on:
   push:
     branches:
