--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=Egor543_OPI_2048project
 sonar.organization=egor543
+sonar.java.binaries=target/classes
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=OPI_2048project
